fix z-index

--- a/src/implementations/vanilla/components/inpage-navigation/_inpage-navigation.scss
+++ b/src/implementations/vanilla/components/inpage-navigation/_inpage-navigation.scss
@@ -29,6 +29,7 @@ $_outline: null !default;
     display: block;
     position: sticky;
     top: 0;
+    z-index: 0;
   }
 }
 
